css fix on radio btn alignment

--- a/src/css/singleCardForm.css
+++ b/src/css/singleCardForm.css
@@ -18,7 +18,8 @@ input[type="radio"] {
   margin-right: 15px;
   position: relative;
   width: 20px;
-
+  margin-top: 3px;
+  vertical-align: middle;
 }
 
 .input-groups {
